k8s/func/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: auth
  namespace: func
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      name: auth
  template:
    metadata:
      labels:
        name: auth
      annotations:
        iam.amazonaws.com/role: func-auth
    spec:
      imagePullSecrets:
      - name: registry
      nodeSelector:
        node-role.kubernetes.io/qa: ""
      containers:
      - env:
        - name: APP_MODE
          valueFrom:
            configMapKeyRef:
              name: auth
              key: APP_MODE
        name: auth
        image: razorpay/auth:97dffd568007360b2306cd4f0a64841b86b88b98
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
          - name: trace
            mountPath: /app/storage/logs/
          - name: nginx
            mountPath: /var/log/nginx/
        readinessProbe:
          httpGet:
            path: /status
            port: 80
            httpHeaders:
              - name: Host
                value: func-auth.razorpay.in
          initialDelaySeconds: 60
          periodSeconds: 120
        livenessProbe:
          httpGet:
            path: /commit.txt
            port: 80
            httpHeaders:
              - name: Host
                value: func-auth.razorpay.in
          initialDelaySeconds: 60
          periodSeconds: 20
        lifecycle:
          preStop:
            exec:
              command: ["/usr/sbin/nginx","-s","quit"]
      volumes:
      - name: trace
        hostPath:
          path: /var/log/fluentd/splunk/auth/trace
      - name: nginx
        hostPath:
          path: /var/log/fluentd/splunk/auth/nginx
      dnsPolicy: Default
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
